--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 
 #navbar a {
-    font-size: 0.8em;
+    font-size: 1em;
     color: skyblue;
     display: block;
     padding: 10px;
@@ -61,7 +61,7 @@ li {
 
 
 code {
-    background-color: #999;
+    background-color: rgb(196, 196, 196);
   display: block;
   margin-left: 5%;
 }
