--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
-    font-family: sans;
+    font-family: Roboto;
 }
 
 /* Left navbar properties */
@@ -20,12 +20,18 @@
     position: fixed;
 }
 
+@media (max-width: 400px) {
+    #navbar {
+        max-width: 30%;
+    }
+}
+
 #navbar header {
     font-size: 1.25em;
     font-weight: 800;
     color: skyblue;
     padding: 10px;
-    border: 1px solid skyblue;
+    border: 2px solid skyblue;
 }
 
 #navbar a {
@@ -37,6 +43,8 @@
     border: 1px solid skyblue;
 }
 
+/* Main content */
+
 #main-doc {
     margin-left: 200px;
     padding: 10px;
@@ -46,6 +54,10 @@ section, p, li, h2 {
     padding: 10px;
   max-width: 75%;
   line-height: 1.5em;
+}
+
+ul {
+    padding: 10px;
 }
 
 li {
@@ -61,9 +73,9 @@ li {
 
 
 code {
-    background-color: rgb(196, 196, 196);
+  background-color: #D3D3D3;
   display: block;
-  margin-left: 5%;
+  margin-left: 2em;
 }
 
 a:active {
@@ -77,4 +89,14 @@ a:visited {
 .note {
   border: 2px dotted black;
   margin-top: 10px;
+}
+
+/* Footer properties */
+
+footer {
+    background-color: #D3D3D3;
+    text-align: center;
+    padding: 1.5em;
+    width: 100%;
+    margin: 0;
 }
