--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p, ul, li, h2 {
 }
 
 section {
-    padding: 1.5rem;
+    padding: 1rem;
 }
 
 ul {
@@ -82,6 +82,7 @@ code {
   font-family: monospace;
   font-size: 1rem;
   line-height: 2rem;
+  padding-left: 10px;
 }
 
 a:active {
